@@ -85,5 +85,11 @@ src_install() {
 	local config_dir="/etc/${PN}"
 	diropts -m750
 	dodir "${config_dir}"
+
+	# home dir
+	diropts -m755
+	dodir "${MY_HOME_DIR}"
+
+	# fix owners
 	fowners -R ${MY_USER}:${MY_USER} "${config_dir}" "${MY_HOME_DIR}"
 }
