@@ -1,4 +1,7 @@
   05 Nov 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-runner-10.0.2.ebuild:
+  dev-vcs/gitlab-runner:  Final fix.
+
+  05 Nov 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-runner-10.0.2.ebuild:
   dev-vcs/gitlab-runner:  Try and fix permissions
 
   05 Nov 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-runner-10.0.2.ebuild:
